Fix T45783: Problem selecting all objects on a layer from a script if any 3d view is in local mode.

Do not take into account lay bits used for local view, when doing exact match.